--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
   position: relative;
   top: -32px;
   width: 100%;
-  height: 4800px;
+  height: 5400px;
   background-image: linear-gradient(
     var(--html-bg-color-green),
     var(--html-bg-color-blue)
@@ -303,4 +303,28 @@ form input {
 
 .company-name {
   color: aliceblue;
+}
+
+.pronajem-prostoru-container {
+  position: relative;
+  top: 275px;
+  width: 75%;
+  margin: auto;
+  text-align: center;
+}
+
+.pronajem-prostoru-container p {
+  font-size: 110%;
+}
+
+.kozi-produkty-container {
+  position: relative;
+  top: 275px;
+  width: 75%;
+  margin: auto;
+  text-align: center;
+}
+
+.kozi-produkty-container p {
+  font-size: 110%;
 }
