--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
   position: relative;
   top: -32px;
   width: 100%;
-  height: 5600px;
+  height: 5900px;
   background-image: linear-gradient(
     var(--html-bg-color-green),
     var(--html-bg-color-blue)
@@ -327,4 +327,12 @@ form input {
 
 .kozi-produkty-container p {
   font-size: 110%;
+}
+
+.katalog {
+  margin: auto;
+  position: relative;
+  width: 75%;
+  text-align: center;
+  top: 300px;
 }
